--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="contact.html" target="blank">Contact</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="https://contact.jdpaltingca.live" target="blank">Contact</a></li>
               </ul>
             </div>
           </div>
